# py_project_template

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  pyproject.toml
dev/: enter.csh  enter.sh  environment.yml  requirements.txt
doc/: .rstcheck.cfg
docs/: changelog.rst  conf.py  index.rst
example/: __init__.py  greet.py
test/: test_greet.py  test_version.py
